--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">2ndAndroidProject</string>
+    <string name="This_Is_A_TEST">2ndAndroidProject</string>
 </resources>
